--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --watch"
+    "minify": "jsmin  -l 3 -o dist/index.min.js dist/index.js",
+    "build": "tsc --declaration && npm run minify"
   },
   "repository": {
     "type": "git",
@@ -26,10 +27,8 @@
     "url": "https://github.com/Achieve-Test-Prep/atp-api-logger/issues"
   },
   "homepage": "https://github.com/Achieve-Test-Prep/atp-api-logger#readme",
-  "dependencies": {
-    "bowser": "^2.11.0"
-  },
   "devDependencies": {
+    "jsmin": "^1.0.1",
     "typescript": "^5.3.3"
   }
 }
