--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "atp-api-logger",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Utility to log api calls for analysis.",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "minify": "jsmin  -l 3 -o dist/index.min.js dist/index.js",
     "build": "tsc --declaration && npm run minify",
-    "publish": "npm publish --access public "
+    "publish": "npm run build && npm publish --access public "
   },
   "repository": {
     "type": "git",
